bonus/confs/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd

---

apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev

---

apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    name: gitlab
